# GenOps-AI

./: .pre-commit-config.yaml  CLAUDE.md  GITHUB_SETUP_GUIDE.md  README.md  create_flowise_pr.sh  pyproject.toml  validate
.github/workflows/: validate-readme-format.yml
benchmarks/: performance_benchmarks.py  raindrop_performance_benchmarks.py
docs/: anthropic-quickstart.md  audit-trail-patterns.md  compliance-best-practices.md  data-retention-templates.md  fireworks-quickstart.md  flowise-quickstart.md  helicone-quickstart.md  langchain-quickstart.md  langfuse-quickstart.md  mistral-quickstart.md  ollama-quickstart.md  openai-quickstart.md  performance-benchmarking.md  perplexity-quickstart.md  posthog-quickstart.md  promptlayer-quickstart.md  raindrop-performance-benchmarks.md  raindrop-quickstart.md  traceloop-quickstart.md  vercel-ai-sdk-quickstart.md  wandb-quickstart.md
docs/arch-diagrams/: architecture1.md  architecture2.md
docs/enterprise/: wandb-enterprise-deployment.md
docs/examples/: example1_rag_pipeline.md  example2_enterprise_chatbot.md  example3_ai_platform.md
docs/integrations/: anthropic.md  compliance.md  fireworks.md  flowise.md  haystack.md  helicone.md  langchain.md  langfuse.md  mistral.md  ollama.md  openai.md  perplexity.md  posthog.md  promptlayer.md  raindrop.md  traceloop.md  vercel-ai-sdk.md  wandb.md
docs/migration-guides/: wandb-from-competitors.md
docs/quickstart/: crewai-quickstart.md
examples/: README.md  attribution_guide.py  auto_instrumentation.py  tag_validation_guide.py
examples/anthropic/: README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  multi_provider_costs.py  production_patterns.py  setup_validation.py
examples/crewai/: README.md  agent_workflow_governance.py  basic_crew_tracking.py  multi_agent_cost_aggregation.py  performance_optimization.py  production_deployment_patterns.py  setup_validation.py
examples/dust/: cost_optimization.py
examples/fireworks/: advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  interactive_setup_wizard.py  production_patterns.py  setup_validation.py
examples/flowise/: 01_basic_flow_execution.py  02_auto_instrumentation.py  03_multi_flow_orchestration.py  04_cost_optimization.py  05_multi_tenant_saas.py  06_enterprise_governance.py  07_production_monitoring.py  08_async_high_performance.py  README.md  config.py
examples/governance_scenarios/: budget_enforcement.py  compliance_audit_trail.py  content_filtering.py  customer_attribution.py
examples/haystack/: README.md  agent_workflow_tracking.py  basic_pipeline_tracking.py  enterprise_governance_patterns.py  multi_provider_cost_aggregation.py  performance_optimization.py  production_deployment_patterns.py  rag_workflow_governance.py
examples/helicone/: README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  hello_helicone_minimal.py  multi_provider_costs.py  production_patterns.py  run_all_examples.sh  setup_validation.py
examples/langchain/: README.md  auto_instrumentation.py  basic_chain_tracking.py  multi_provider_costs.py  rag_pipeline_monitoring.py  setup_validation.py
examples/langfuse/: README.md  advanced_observability.py  auto_instrumentation.py  basic_tracking.py  evaluation_integration.py  production_patterns.py  prompt_management.py  run_all_examples.sh  setup_validation.py
examples/middleware/: django_middleware.py  fastapi_middleware.py  flask_middleware.py
examples/mistral/: README.md  auto_instrumentation.py  cost_optimization.py  enterprise_deployment.py  european_ai_advantages.py  hello_mistral_minimal.py
examples/observability/: datadog_integration.py  honeycomb_integration.py
examples/ollama/: README.md  hello_ollama_minimal.py  local_model_optimization.py  ollama_production_deployment.py
examples/openai/: README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  multi_provider_costs.py  production_patterns.py  setup_validation.py
examples/perplexity/: advanced_search.py  auto_instrumentation.py  basic_search.py  cost_optimization.py  interactive_setup_wizard.py  production_patterns.py  setup_validation.py
examples/posthog/: CONTRIBUTING.md  README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  interactive_setup_wizard.py  production_patterns.py  run_all_examples.sh  setup_validation.py
examples/promptlayer/: advanced_observability.py  auto_instrumentation.py  basic_tracking.py  evaluation_integration.py  production_patterns.py  prompt_management.py  run_all_examples.sh  setup_validation.py
examples/raindrop/: README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  (+4 more)
observability/: demo-app.py
scripts/: validate-readme-format.py  validate_setup.py
tests/: conftest.py  test_auto_instrumentation.py  test_crewai_adapter.py  test_crewai_agent_monitor.py  test_crewai_conftest.py  test_crewai_cost_aggregator.py  test_crewai_integration.py  test_crewai_registration.py  test_crewai_validation.py  test_haystack_adapter.py  test_haystack_cost_aggregator.py  test_haystack_integration.py  test_haystack_monitor.py  test_haystack_registration.py  test_haystack_validation.py  test_quick.py
(+183 files in other folders)
