[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genops"
dynamic = ["version"]
description = "OpenTelemetry-native governance for AI. An open-source governance framework for AI, built on OpenTelemetry standards and specs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "GenOps AI Contributors" },
]
maintainers = [
    { name = "GenOps AI", email = "support@onekernel.io" },
]
keywords = [
    "opentelemetry",
    "ai",
    "governance",
    "observability",
    "telemetry",
    "llm",
    "cost",
    "policy",
    "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-semantic-conventions>=0.41b0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
bedrock = ["boto3>=1.34.0"]
gemini = ["google-generativeai>=0.3.0; python_version>='3.9'"]
replicate = ["replicate>=0.20.0"]
openrouter = ["openai>=1.0.0"]
helicone = ["requests>=2.25.0"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-social-plugin>=0.3.0",
]
all = [
    "genops[openai]",
    "genops[anthropic]",
    "genops[langchain]", 
    "genops[llamaindex]",
    "genops[bedrock]",
    "genops[gemini]",
    "genops[openrouter]",
    "genops[helicone]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.90.0",
    "mutmut>=2.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/KoshiHQ/GenOps-AI"
Documentation = "https://github.com/KoshiHQ/GenOps-AI/tree/main/docs"
Repository = "https://github.com/KoshiHQ/GenOps-AI"
Issues = "https://github.com/KoshiHQ/GenOps-AI/issues"

[project.scripts]
genops = "genops.cli.main:main"

[tool.hatch.version]
path = "src/genops/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CLAUDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genops"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP037", # remove quotes from type annotation (can break with forward refs)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for test files

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/*.py"]